--- a/content.css
+++ b/content.css
@@ -1,17 +1,26 @@
 #fullscreen-picture-viewer-bigdiv {
 	display:none;
-	position:absolute;
+	position:fixed;
 	z-index:99999999;
 	top:0;
 	left:0;
 	width:100%;
 	height:100%;
-	width:100%;
-	height:100%;
 	background:white;
-	min-height:1500px;
+	overflow: auto;
+	text-align: center;
 }
 
 #fullscreen-picture-viewer-bigdiv img {
 	vertical-align: top;
+}
+
+body.full-screen-picture-viewer #fullscreen-picture-viewer-bigdiv {
+	display:block;
+}
+body.full-screen-picture-viewer embed {
+	display:none;
+}
+body.full-screen-picture-viewer iframe {
+	display:none;
 }
